--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Shreyas G">Shreyas G</h1>
+          <h1 class="name" title="Shreyas Ganeshguru">Shreyas G</h1>
 
-          <p class="title">Senior Undergraduate Student</p>
+          <p class="title">Postgraduate Computer Science Student</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -75,6 +75,7 @@
               <p class="contact-title">Email</p>
 
               <a href="mailto:shreyas0ganesh@gmail.com" class="contact-link">shreyas0ganesh@gmail.com</a>
+              <a href="mailto:sganeshg@uncc.edu" class="contact-link">sganeshg@uncc.edu</a>
             </div>
 
           </li>
@@ -89,6 +90,7 @@
               <p class="contact-title">Phone</p>
 
               <a href="tel:+919845960394" class="contact-link">+91 9845960394</a>
+              <a href="tel:+1(704)930-3833" class="contact-link">+1 704(930)-3833</a>
             </div>
 
           </li>
@@ -117,7 +119,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Bengaluru, Karnataka, India</address>
+              <address>Charlotte, North Carolina, United States</address>
             </div>
 
           </li>
@@ -221,7 +223,7 @@
 
         <section class="about-text">
           <p>
-            I am a senior undergraduate student pursuing computer science and engineering, with industry-level experience in computer vision and machine learning. I'm also a very versatile professional who can contribute in areas outside his expertise. Being a social person, I go to great lengths in connecting and interacting with people around me. 
+            I am a postgraduate computer science student pursuing computer science and engineering, with industry-level experience in computer vision and machine learning. I'm also a very versatile professional who can contribute in areas outside his expertise. Being a social person, I go to great lengths in connecting and interacting with people around me. 
           </p>
 
           <p>
@@ -229,7 +231,15 @@
           </p>
 
           <p>
-            Ultimately I believe the growth of a person and the firm happen simultaneously. It is my ambition to work at a firm and use all the skills at my disposal to accomplish tasks that result in mutual growth. Hence I am seeking opportunities that permit me to do the same and be an asset to the firm.  
+            Ultimately I believe the growth of a person and the firm happen simultaneously. It is my ambition to work at a firm and use all the skills at my disposal to accomplish tasks that result in mutual growth. Hence I am seeking opportunities that permit me to do the same and be an asset to the firm.
+          </p>
+          <p>
+            Courses undertaken by me for the fall 2023 semester:
+            1. Machine Learning 6156
+            2. Software System Design and Implementation 6112
+            3. Database Systems 6160
+
+
           </p>
         </section>
 
