--- a/index.html
+++ b/index.html
@@ -502,6 +502,16 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">University of North Carolina at Charlotte</h4>
+
+              <span>2023 — 2025 </span>
+
+              
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Dayananda Sagar College Of Engineering</h4>
 
               <span>2019 — 2023 </span>
