--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Shreyas Ganeshguru">Shreyas G</h1>
+          <h1 class="name" title="Shreyas Ganeshguru">Shreyas Ganeshguru</h1>
 
           <p class="title">Postgraduate Computer Science Student</p>
         </div>
