--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           </p>
           <p>
             Courses undertaken by me for the fall 2023 semester:
-            <li> 1. Machine Learning 6156></li>
+            <li> 1. Machine Learning 6156</li>
             
             <li> 2. Software System Design and Implementation 6112</li>
             <l1> 3. Database Systems 6160 </l1>
